# pytorrent

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
bittorrent_client/: __init__.py  cli.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
pytorrent/: __init__.py  cli.py  client.py  config.py  connections.py  logger.py  msg_handler.py  torrent_file.py  torrent_io.py  twisted_client.py  utils.py
tests/: __init__.py  test_bittorrent_client.py  test_connections.py  test_torrent_file.py
tests/data/: Doom II_ Delta-Q-Delta.torrent
