[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pytorrent/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[options]
zip_safe = False
include_package_data = True

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
[tool:pytest]
collect_ignore = ['setup.py']
log_cli_level = INFO
